# chakshu

./: .dockerignore  .env  .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  ImageLinks.py  LICENSE  README.md  TagTextAudio.py  apiResponses.md  compose.yml  docker-compose.yml  docs-requirements.txt  index.html  output.txt  pyproject.toml  ruff.toml  sitemap.xml  start_server.sh
.github/workflows/: README.md  deploy-docs.yml  deploy.yml  docs-ci.yml
api/: index.html
api/endpoints/: index.html
api/error_handling/: index.html
api/processing_api/: index.html
api/response_examples/: index.html
api/scraper/: index.html
api/search_api/: index.html
api/views/: index.html
chakshu/: Dockerfile  README.md  config.py  demo.py  manage.py  mkdocs.yml  output.txt  pyproject.toml  table_analysis_results.txt
chakshu/api/: urls.py
chakshu/captioner/: LLAVA.py  admin.py  apps.py  class-captioner.py  class-wiki.py  image_captioner.py  img-to-text.py  metadata_image_captioner.py  models.py  temp.py  urls.py  views.py
chakshu/captioner/migrations/: 0001_initial.py
chakshu/chakshu/: asgi.py  settings.py  urls.py  wsgi.py
chakshu/core/: hyperlinks.py  logger.py  urls.py  utils.py  views.py  wiki_api.py
chakshu/core/migrations/: 0001_initial.py  0002_wikipediaimagecaption_delete_wikipediacaption.py  0003_imagecaption_delete_wikipediaimagecaption.py  0004_wikipediapage_delete_imagecaption.py  0005_imagecaption.py  0006_delete_imagecaption_delete_wikipediapage.py  0007_initial.py  0008_delete_imagecaption_delete_wikipediapage.py
chakshu/docs/: configuration.md  index.md  installation.md  project_overview.md  project_structure.md  setup_guide.md
chakshu/docs/api/: error_handling.md  (+4 more)
chakshu/scraper/: apps.py  content_scraper.py  imageScrapper.py  scraper.py  table_scraper.py  temp.py  urls.py  views.py
chakshu/search_test/: google_search_throttling.py
chakshu/summarizer/: apps.py  bart_summarizer.py  bert_trial.py  reading_table_final.py
chakshu/text_to_speech/: apps.py  nix_tts.py  views.py
configuration/: index.html
faq/: index.html
features/content_processing/: index.html
features/image_captioning/: index.html
installation/: index.html
latex_to_text/: Dockerfile  README.md  clearspoken.js  package-lock.json  package.json  server.js
latex_to_text/speech-rule-engine/: .eslintrc  .gitmodules  .npmignore  .prettierrc  Makefile  NOTICE  README.md  crowdin.yml  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  webpack.config.mjs
modules/: index.html
modules/api_app/: index.html
modules/captioner/: index.html
modules/captioner_app/: index.html
modules/core/: index.html
modules/core_app/: index.html
modules/scraper_app/: index.html
project_overview/: index.html
project_structure/: index.html
search/: search_index.json
setup_guide/: index.html
structure/: index.html
(+1204 files in other folders)
