[tool.poetry]
name = "chakshu"
version = "0.1.0"
description = "Chakshu helps blind people read and navigate Wikipedia articles using voice commands"
authors = ["CSE Department"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
numpy = "^2.0.1"
pandas = "^2.2.2"
ruff = "^0.5.6"
setuptools = "^72.1.0"
wheel = "^0.43.0"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
