[tool.poetry]
name = "chakshu"
version = "0.1.0"
description = "Chakshu helps blind people read and navigate Wikipedia articles using voice commands"
authors = ["CSE Department"]
license = "MIT License"
readme = "README.md"

# Custom source for PyTorch packages only
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
Django = "^5.1.0"
djangorestframework = "^3.15.2"
ratelimit = "^2.2.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
ruff = "^0.5.6"
setuptools = "^72.1.0"
scipy = "^1.14.1"
wheel = "^0.43.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
transformers = "^4.44.2"
Wikipedia-API = "^0.7.1"
onnxruntime = "^1.7.0"
phonemizer = "^2.2.1"
joblib = "^1.4.2"
torch = "2.6.0"
django-cors-headers = "^4.4.0"
googlesearch-python = "^1.3.0"
ollama = "^0.3.3"
pillow = "^10.4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings = "^0.29.1"
mkdocs-markdownextradata-plugin = "^0.2.6"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
